# ai-automation-agent

./: .gitignore  README.md  pyproject.toml  test_outreach.py
ai-career-agent-ui/app/: page.tsx
app/: main.py
app/agents/: automation_agent.py  career_agent_graph.py  langgraph_agent.py
app/api/: routes.py
app/db/: memory.py
app/outreach/: agent.py  followups.py  leads.py  linkedin_helper.py  sender.py
app/tools/: github_projects.py  hilary_knowledge.py  outreach_tools.py
